@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 m4_define(shapelib_version_major, 1)
-m4_define(shapelib_version_minor, 3)
+m4_define(shapelib_version_minor, 4)
 m4_define(shapelib_version_micro, 0)
 
 AC_PREREQ(2.62)
@@ -16,7 +16,7 @@ AM_SILENT_RULES([yes])
 m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
 
 dnl See http://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html
-AC_SUBST([SHAPELIB_SO_VERSION], [1:1:0])
+AC_SUBST([SHAPELIB_SO_VERSION], [2:1:1])
 
 AC_PROG_CC
 AC_PROG_CXX
